--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Simsimi</string>
     <string name="simsimi_api">40bbcc60-f5b9-4209-8a1a-a75b1d48e6c3</string>
+    <string name="enter_your_message">Enter your message</string>
 </resources>
